<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/textsize_16sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textsize_14sp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen_8dp"
                    android:weightSum="5">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/system_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:hint="@string/new_measurement_system">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_system"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textSize="@dimen/textsize_14sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/add_system_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/dimen_10dp"
                        android:layout_weight="1"
                        android:background="@color/DarkGray"

                        android:padding="@dimen/dimen_5dp"
                        android:text="@string/add"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textsize_14sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/unit_system_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:background="#BAB5B5"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_system" />

                    <Spinner
                        android:id="@+id/spinner_unit_system"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:spinnerMode="dropdown" />
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_unit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textsize_14sp"
                    android:hint="@string/unit_name"
                    android:padding="@dimen/dimen_8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_unit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_14sp"
                        android:imeOptions="actionNext"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/unit_category_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textsize_14sp"
                    android:background="#BAB5B5"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_category" />

                    <Spinner
                        android:id="@+id/spinner_unit_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:spinnerMode="dropdown" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textsize_14sp"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_base_system" />

                    <TextView
                        android:id="@+id/tv_unit_base_system"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/textsize_14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textsize_14sp"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_base" />

                    <TextView
                        android:id="@+id/tv_unit_base"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/textsize_14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textsize_14sp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/unit_conversion_factor_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/unit_convert_factor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_text_conversion_factor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="@dimen/textsize_14sp"
                            android:imeOptions="actionDone"
                            android:inputType="numberDecimal"
                            android:text="@string/unit_convert_factor_default" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/unit_preview_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/preview"
                    android:textStyle="italic|bold" />

                <TextView
                    android:id="@+id/tv_unit_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textsize_14sp"
                    tools:text="x CustomUnit = x BaseUnit " />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen_12dp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/SaddleBrown"
                    android:padding="@dimen/dimen_8dp"
                    android:text="@string/add_new_unit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_14sp" />

            </LinearLayout>

        </ScrollView>


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
