<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/LightSteelBlue"
    app:cardCornerRadius="@dimen/dimen_15dp"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_unit_item_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/dimen_8dp"
        android:layout_margin="@dimen/dimen_8dp">


        <TextView
            android:id="@+id/tv_unit_system_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/Black"
            android:textSize="@dimen/textsize_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/title_custom_unit_system" />


        <TextView
            android:id="@+id/tv_unit_system"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_unit_system_title"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:textColor="@color/Black"
            android:textSize="@dimen/textsize_14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_unit_system_title"
            app:layout_constraintTop_toTopOf="parent"
             />


        <TextView
            android:id="@+id/tv_unit_name_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/Black"
            android:textSize="@dimen/textsize_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_unit_system_title"
            android:text="@string/title_custom_unit_name" />

        <TextView
            android:id="@+id/tv_unit_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_unit_name_title"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:textColor="@color/Black"
            android:textSize="@dimen/textsize_14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_unit_name_title"
            app:layout_constraintTop_toTopOf="@id/tv_unit_name_title"
            />


        <TextView
            android:id="@+id/tv_unit_category_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textColor="@color/Black"
            android:textSize="@dimen/textsize_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_unit_name_title"
            android:text="@string/title_custom_unit_category" />

        <TextView
            android:id="@+id/tv_unit_category"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_unit_category_title"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:textColor="@color/Black"
            android:textSize="@dimen/textsize_14sp"
            app:layout_constraintStart_toEndOf="@id/tv_unit_category_title"
            app:layout_constraintTop_toTopOf="@id/tv_unit_category_title"
            />

        <TextView
            android:id="@+id/tv_unit_base"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:textColor="@color/DarkBlue"
            android:textSize="@dimen/textsize_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_unit_category_title"
            />


        <ImageView
            android:id="@+id/image_view_btn_delete_unit"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:padding="@dimen/dimen_2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_delete_24"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
